--- a/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/hello-view.fxml
+++ b/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/hello-view.fxml
@@ -6,11 +6,11 @@
 
 <?import javafx.scene.control.Button?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="majestatyczne.bestie.frontend.HelloController">
+      fx:controller="majestatyczne.bestie.frontend.controller.HomePageController">
   <padding>
     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
   </padding>
 
   <Label fx:id="welcomeText"/>
-  <Button text="Hello!" onAction="#onHelloButtonClick"/>
+  <Button text="Click me to import quiz!" onAction="#onGetFile"/>
 </VBox>
