--- a/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/quiz-page.fxml
+++ b/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/quiz-page.fxml
@@ -1,14 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="majestatyczne.bestie.frontend.controller.QuizPageController"
-            prefHeight="400.0" prefWidth="600.0">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="majestatyczne.bestie.frontend.controller.QuizPageController">
+    <children>
+        <HBox prefHeight="50.0" prefWidth="200.0" spacing="10.0">
+            <children>
+                <Label fx:id="quizNameLabel" />
+                <Label fx:id="quizDateLabel" />
+                <Button mnemonicParsing="false" text="export" />
+                <Button mnemonicParsing="false" text="settings" />
+            </children>
+            <padding>
+                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+            </padding>
+        </HBox>
+        <VBox HBox.hgrow="ALWAYS">
+            <TableView fx:id="resultTable" prefHeight="654.0" prefWidth="600.0">
+                <columns>
+                    <TableColumn fx:id="nameColumn" text="Imię zwierzaka" />
+                    <TableColumn fx:id="scoreColumn" text="Wynik quizu" />
+                    <TableColumn fx:id="endDateColumn" text="Zakonczenie quizu" />
+                    <TableColumn fx:id="rewardColumn" text="nagrody" />
+                </columns>
+                <columnResizePolicy>
+                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                </columnResizePolicy>
+            </TableView>
+        </VBox>
 
+    </children>
 </VBox>
