add css styles to homepage

--- a/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/home-page.fxml
+++ b/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/home-page.fxml
@@ -1,28 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import java.net.URL?>
 <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="majestatyczne.bestie.frontend.controller.HomePageController">
    <children>
-      <VBox alignment="TOP_CENTER" prefHeight="400.0" prefWidth="200.0" style="-fx-background-color: #CCCCCC;">
+      <VBox alignment="TOP_CENTER" prefHeight="400.0" prefWidth="200.0" spacing="10.0" styleClass="home-page-navbar">
          <children>
-            <Button fx:id="importButton" mnemonicParsing="false" onAction="#onGetFile" text="Import file" textAlignment="CENTER" />
+            <ImageView fx:id="settingsIcon" fitHeight="40" fitWidth="40" pickOnBounds="true" preserveRatio="true">
+               <Image url="@settings.png"/>
+            </ImageView>
+            <Button fx:id="importButton" mnemonicParsing="false" onAction="#onGetFile" text="Import" textAlignment="CENTER" />
          </children>
-         <padding>
-            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-         </padding></VBox>
+      </VBox>
       <VBox HBox.hgrow="ALWAYS">
-              <TableView fx:id="quizTable" onMouseClicked="#onQuizSelected" prefHeight="720.0">
-                 <columns>
-                    <TableColumn fx:id="nameColumn"/>
-                    <TableColumn fx:id="dateColumn" />
-                 </columns>
-                 <columnResizePolicy>
-                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
-                 </columnResizePolicy>
-              </TableView>
+           <TableView fx:id="quizTable" onMouseClicked="#onQuizSelected" prefHeight="720.0" styleClass="home-page-table-view">
+              <columns>
+                 <TableColumn fx:id="nameColumn"/>
+                 <TableColumn fx:id="dateColumn" />
+              </columns>
+              <columnResizePolicy>
+                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+              </columnResizePolicy>
+           </TableView>
       </VBox>
    </children>
+   <stylesheets>
+      <URL value="@styles.css"/>
+   </stylesheets>
 </HBox>
