--- a/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/home-page.fxml
+++ b/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/home-page.fxml
@@ -10,7 +10,7 @@
    <children>
       <VBox alignment="TOP_CENTER" prefHeight="400.0" prefWidth="200.0" spacing="10.0" styleClass="home-page-navbar">
          <children>
-            <ImageView fx:id="settingsIcon" fitHeight="40" fitWidth="40" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="settingsIcon" fitHeight="40" fitWidth="40" pickOnBounds="true" preserveRatio="true" onMouseClicked="#onSettingsClicked">
                <Image url="@settings.png"/>
             </ImageView>
             <Button fx:id="importButton" mnemonicParsing="false" onAction="#onGetFile" text="Import" textAlignment="CENTER" />
