pass quiz data to QuizSettingsPageController, add models to frontend

--- a/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/quiz-settings-page.fxml
+++ b/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/quiz-settings-page.fxml
@@ -8,19 +8,32 @@
 
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
-<VBox xmlns="http://javafx.com/javafx"
-      xmlns:fx="http://javafx.com/fxml"
-      fx:controller="majestatyczne.bestie.frontend.controller.QuizSettingsPageController"
-      prefHeight="400.0" prefWidth="600.0">
+<?import java.net.URL?>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="majestatyczne.bestie.frontend.controller.QuizSettingsPageController">
     <children>
-        <HBox prefHeight="50.0" prefWidth="200.0" alignment="BASELINE_CENTER" >
-            <HBox>
+        <HBox prefHeight="50.0" prefWidth="200.0" alignment="BASELINE_CENTER" styleClass="quiz-page-header">
+            <HBox styleClass="quiz-page-header-left">
                 <ImageView fx:id="backIcon" fitHeight="40" fitWidth="40" pickOnBounds="true" preserveRatio="true"
                            onMouseClicked="#onGoBackClicked">
                     <Image url="@left-arrow.png"/>
                 </ImageView>
             </HBox>
+            <VBox styleClass="quiz-page-header-middle" HBox.hgrow="ALWAYS">
+                <children>
+                    <Label fx:id="quizNameLabel" styleClass="quiz-name"/>
+                    <Label fx:id="quizScoreLabel" styleClass="quiz-date"/>
+                </children>
+            </VBox>
+            <HBox styleClass="quiz-page-header-right">
+                <children>
+
+                </children>
+            </HBox>
         </HBox>
     </children>
+    <stylesheets>
+        <URL value="@styles.css"/>
+    </stylesheets>
 
 </VBox>
