--- a/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/home-page.fxml
+++ b/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/home-page.fxml
@@ -20,7 +20,8 @@
            <TableView fx:id="quizTable" onMouseClicked="#onQuizSelected" prefHeight="720.0" styleClass="home-page-table-view">
               <columns>
                  <TableColumn fx:id="nameColumn"/>
-                 <TableColumn fx:id="dateColumn" />
+                 <TableColumn fx:id="dateColumn"/>
+                 <TableColumn fx:id="deleteColumn" text="Delete"/>
               </columns>
               <columnResizePolicy>
                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
