--- a/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/quiz-page.fxml
+++ b/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/quiz-page.fxml
@@ -36,7 +36,7 @@
                 <columns>
                     <TableColumn fx:id="nameColumn" text="Imię zwierzaka" />
                     <TableColumn fx:id="scoreColumn" text="Wynik quizu" />
-                    <TableColumn fx:id="endDateColumn" text="Zakonczenie quizu" />
+                    <TableColumn fx:id="endDateColumn" text="Zakończenie quizu" />
                     <TableColumn fx:id="rewardColumn" text="Przyznane nagrody" />
                 </columns>
                 <columnResizePolicy>
