--- a/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/global-settings-page.fxml
+++ b/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/global-settings-page.fxml
@@ -8,19 +8,44 @@
 
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
+<?import java.net.URL?>
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="majestatyczne.bestie.frontend.controller.GlobalSettingsPageController"
       prefHeight="400.0" prefWidth="600.0">
     <children>
-        <HBox prefHeight="50.0" prefWidth="200.0" alignment="BASELINE_CENTER" >
-            <HBox>
-                <ImageView fx:id="backIcon" fitHeight="40" fitWidth="40" pickOnBounds="true" preserveRatio="true"
-                           onMouseClicked="#onGoBackClicked">
-                    <Image url="@left-arrow.png"/>
-                </ImageView>
-            </HBox>
+        <HBox prefHeight="50.0" prefWidth="200.0" alignment="BASELINE_CENTER" styleClass="quiz-page-header">
+            <children>
+                <HBox styleClass="quiz-page-header-left">
+                    <ImageView fx:id="backIcon" fitHeight="40" fitWidth="40" pickOnBounds="true" preserveRatio="true"
+                               onMouseClicked="#onGoBackClicked">
+                        <Image url="@left-arrow.png"/>
+                    </ImageView>
+                </HBox>
+                <VBox styleClass="quiz-page-header-middle" HBox.hgrow="ALWAYS">
+                </VBox>
+                <HBox styleClass="quiz-page-header-right">
+                    <Button mnemonicParsing="false" text="Zapisz zmiany" onAction="#onSaveChangesClicked"/>
+                </HBox>
+
+            </children>
+
         </HBox>
+        <VBox>
+            <TableView fx:id="rewardTable" prefWidth="600.0" HBox.hgrow="ALWAYS" styleClass="quiz-page-table-view">
+                <columns>
+                    <TableColumn fx:id="rewardNameColumn" text="Nazwa"/>
+                    <TableColumn fx:id="rewardCategoryColumn" text="Kategoria"/>
+                    <TableColumn fx:id="rewardDescriptionColumn" text="Opis"/>
+                </columns>
+                <columnResizePolicy>
+                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                </columnResizePolicy>
+            </TableView>
+        </VBox>
     </children>
+    <stylesheets>
+        <URL value="@styles.css"/>
+    </stylesheets>
 
 </VBox>
