--- a/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/global-settings-page.fxml
+++ b/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/global-settings-page.fxml
@@ -32,12 +32,22 @@
 
         </HBox>
         <VBox>
+            <Label text="Nagrody" styleClass="settings-header-label"/>
             <TableView fx:id="rewardTable" prefWidth="600.0" HBox.hgrow="ALWAYS" styleClass="quiz-page-table-view" editable="true">
                 <columns>
                     <TableColumn fx:id="rewardNameColumn" text="Nazwa" editable="true"/>
                     <TableColumn fx:id="rewardCategoryColumn" text="Kategoria"/>
                     <TableColumn fx:id="rewardDescriptionColumn" text="Opis" editable="true"/>
                     <TableColumn fx:id="rewardCategoryChoiceColumn"/>
+                </columns>
+                <columnResizePolicy>
+                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                </columnResizePolicy>
+            </TableView>
+            <Label text="Kategorie nagród" styleClass="settings-header-label"/>
+            <TableView fx:id="categoryTable" prefWidth="600.0" HBox.hgrow="ALWAYS" styleClass="quiz-page-table-view" editable="true">
+                <columns>
+                    <TableColumn fx:id="categoryNameColumn" text="Nazwa" editable="true"/>
                 </columns>
                 <columnResizePolicy>
                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
