--- a/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/quiz-settings-page.fxml
+++ b/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/quiz-settings-page.fxml
@@ -31,6 +31,32 @@
                 </children>
             </HBox>
         </HBox>
+        <HBox alignment="BASELINE_LEFT">
+            <Label styleClass="settings-header-label" text="Wybierz typ strategii:"/>
+            <ComboBox fx:id="rewardStrategyTypeBox" onAction="#onRewardStrategyTypeBoxClicked"/>
+        </HBox>
+        <VBox>
+            <children>
+                <VBox fx:id="percentageVBox">
+                    <Label fx:id="percentageStrategyInfo"/>
+                </VBox>
+                <VBox fx:id="scoreVBox">
+                    <Label fx:id="scoreStrategyInfo"/>
+                </VBox>
+                <TableView fx:id="parametersTable" prefWidth="600.0" styleClass="quiz-page-table-view" editable="true">
+                    <columns>
+                        <TableColumn fx:id="priorityColumn" text="Priorytet" editable="true"/>
+                        <TableColumn fx:id="parameterValueColumn" text="Wartość parametru" editable="true" />
+                        <TableColumn fx:id="rewardCategoryColumn" text="Kategoria nagrody" />
+                        <TableColumn fx:id="rewardCategoryChoiceColumn" text="Zmień kategorię"/>
+                    </columns>
+                    <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                    </columnResizePolicy>
+                </TableView>
+            </children>
+        </VBox>
+        <Button fx:id="saveButton" text="Zapisz" onAction="#onSaveButtonClicked" disable="true"/>
     </children>
     <stylesheets>
         <URL value="@styles.css"/>
