--- a/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/global-settings-page.fxml
+++ b/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/global-settings-page.fxml
@@ -30,8 +30,8 @@
             </children>
 
         </HBox>
-        <HBox spacing="100.0" style="-fx-padding: 0 10 0 10px;">
-            <VBox prefWidth="750.0">
+        <HBox spacing="50.0" style="-fx-padding: 0 10 0 10px;">
+            <VBox prefWidth="850.0">
                 <HBox styleClass="global-settings-page-section-title">
                     <Label text="Nagrody" styleClass="settings-header-label"/>
                     <Region HBox.hgrow="ALWAYS" />
@@ -48,6 +48,7 @@
                         <TableColumn fx:id="rewardDescriptionColumn" text="Opis" editable="true"/>
                         <TableColumn fx:id="rewardCategoryColumn" text="Kategoria"/>
                         <TableColumn fx:id="rewardCategoryChoiceColumn" text="Zmień kategorię"/>
+                        <TableColumn fx:id="rewardDeleteColumn" text="Usuń"/>
                     </columns>
                     <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -68,6 +69,7 @@
                 <TableView fx:id="categoryTable" prefWidth="600.0" HBox.hgrow="ALWAYS" styleClass="quiz-page-table-view" editable="true">
                     <columns>
                         <TableColumn fx:id="categoryNameColumn" text="Nazwa" editable="true"/>
+                        <TableColumn fx:id="categoryDeleteColumn" text="Usuń"/>
                     </columns>
                     <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
