--- a/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/quiz-settings-page.fxml
+++ b/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/quiz-settings-page.fxml
@@ -20,27 +20,23 @@
                 </ImageView>
             </HBox>
             <VBox styleClass="quiz-page-header-middle" HBox.hgrow="ALWAYS">
-                <children>
-                    <Label fx:id="quizNameLabel" styleClass="quiz-name"/>
-                    <Label fx:id="quizScoreLabel" styleClass="quiz-date"/>
-                </children>
+                <Label fx:id="quizNameLabel" styleClass="quiz-name"/>
+                <Label fx:id="quizScoreLabel"/>
             </VBox>
             <HBox styleClass="quiz-page-header-right">
-                <children>
-
-                </children>
+                <Button fx:id="saveButton" text="Zapisz" onAction="#onSaveButtonClicked" disable="true"/>
             </HBox>
         </HBox>
-        <HBox alignment="BASELINE_LEFT">
+        <HBox styleClass="quiz-settings-strategy-choice">
             <Label styleClass="settings-header-label" text="Wybierz typ strategii:"/>
             <ComboBox fx:id="rewardStrategyTypeBox" onAction="#onRewardStrategyTypeBoxClicked"/>
         </HBox>
         <VBox>
             <children>
-                <VBox fx:id="percentageVBox">
+                <VBox fx:id="percentageVBox" styleClass="quiz-settings-strategy-desc-label">
                     <Label fx:id="percentageStrategyInfo"/>
                 </VBox>
-                <VBox fx:id="scoreVBox">
+                <VBox fx:id="scoreVBox" styleClass="quiz-settings-strategy-desc-label">
                     <Label fx:id="scoreStrategyInfo"/>
                 </VBox>
                 <TableView fx:id="parametersTable" prefWidth="600.0" styleClass="quiz-page-table-view" editable="true">
@@ -56,7 +52,6 @@
                 </TableView>
             </children>
         </VBox>
-        <Button fx:id="saveButton" text="Zapisz" onAction="#onSaveButtonClicked" disable="true"/>
     </children>
     <stylesheets>
         <URL value="@styles.css"/>
