--- a/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/styles.css
+++ b/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/styles.css
@@ -148,3 +148,14 @@
     -fx-padding: 5 0 5 0px;
     -fx-alignment: center-left;
 }
+
+.quiz-settings-strategy-choice {
+    -fx-alignment: center-left;
+    -fx-spacing: 10px;
+    -fx-padding: 5 10 5 10px;
+}
+
+.quiz-settings-strategy-desc-label {
+    -fx-padding: 5 10 5 10px;
+    -fx-font-size: 12pt;
+}
