--- a/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/quiz-settings-page.fxml
+++ b/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/quiz-settings-page.fxml
@@ -29,7 +29,7 @@
         </HBox>
         <HBox styleClass="quiz-settings-strategy-choice">
             <Label styleClass="settings-header-label" text="Wybierz typ strategii:"/>
-            <ComboBox fx:id="rewardStrategyTypeBox" onAction="#onRewardStrategyTypeBoxClicked"/>
+            <ChoiceBox fx:id="rewardStrategyTypeBox" onAction="#onRewardStrategyTypeBoxClicked"/>
         </HBox>
         <VBox>
             <children>
@@ -41,10 +41,9 @@
                 </VBox>
                 <TableView fx:id="parametersTable" prefWidth="600.0" styleClass="quiz-page-table-view" editable="true">
                     <columns>
-                        <TableColumn fx:id="priorityColumn" text="Priorytet" editable="true"/>
+                        <TableColumn fx:id="priorityColumn" text="Priorytet"/>
                         <TableColumn fx:id="parameterValueColumn" text="Wartość parametru" editable="true" />
                         <TableColumn fx:id="rewardCategoryColumn" text="Kategoria nagrody" />
-                        <TableColumn fx:id="rewardCategoryChoiceColumn" text="Zmień kategorię"/>
                     </columns>
                     <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
