add new popup window for exporting quiz results

--- a/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/styles.css
+++ b/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/styles.css
@@ -159,3 +159,9 @@
     -fx-padding: 5 10 5 10px;
     -fx-font-size: 12pt;
 }
+
+.export-popup-vbox {
+    -fx-spacing: 10px;
+    -fx-padding: 10 10 10 10px;
+    -fx-alignment: center;
+}
