--- a/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/quiz-page.fxml
+++ b/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/quiz-page.fxml
@@ -23,7 +23,7 @@
                 </VBox>
                 <HBox styleClass="quiz-page-header-right">
                     <children>
-                        <Button mnemonicParsing="false" text="Export" />
+                        <Button mnemonicParsing="false" text="Export" onAction="#onExportClicked"/>
                         <ImageView fx:id="settingsIcon" fitHeight="40" fitWidth="40" pickOnBounds="true" preserveRatio="true" onMouseClicked="#onSettingsClicked">
                             <Image url="@settings.png"/>
                         </ImageView>
