--- a/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/home-page.fxml
+++ b/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/home-page.fxml
@@ -21,7 +21,7 @@
               <columns>
                  <TableColumn fx:id="nameColumn"/>
                  <TableColumn fx:id="dateColumn"/>
-                 <TableColumn fx:id="deleteColumn" text="Usuń"/>
+                 <TableColumn fx:id="deleteColumn" text="Usuń" style="-fx-alignment: center-right"/>
               </columns>
               <columnResizePolicy>
                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
