--- a/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/stats-page.fxml
+++ b/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/stats-page.fxml
@@ -13,7 +13,7 @@
       prefHeight="400.0" prefWidth="600.0">
 
     <HBox prefHeight="50.0" prefWidth="200.0" alignment="BASELINE_CENTER" styleClass="quiz-page-header">
-        <HBox styleClass="quiz-page-header-left">
+        <HBox styleClass="stats-page-header-left">
             <ImageView fx:id="backIcon" fitHeight="40" fitWidth="40" pickOnBounds="true" preserveRatio="true" onMouseClicked="#onGoBackClicked">
                 <Image url="@left-arrow.png"/>
             </ImageView>
@@ -22,7 +22,7 @@
             <Label fx:id="quizNameLabel" styleClass="quiz-name"/>
             <Label fx:id="quizDateLabel" styleClass="quiz-date"/>
         </VBox>
-        <HBox styleClass="quiz-page-header-right"> </HBox>
+        <HBox styleClass="stats-page-header-right"> </HBox>
     </HBox>
 
     <stylesheets>
