--- a/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/global-settings-page.fxml
+++ b/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/global-settings-page.fxml
@@ -47,7 +47,7 @@
                         <TableColumn fx:id="rewardNameColumn" text="Nazwa" editable="true"/>
                         <TableColumn fx:id="rewardDescriptionColumn" text="Opis" editable="true"/>
                         <TableColumn fx:id="rewardCategoryColumn" text="Kategoria"/>
-                        <TableColumn fx:id="rewardDeleteColumn" text="Usuń"/>
+                        <TableColumn fx:id="rewardDeleteColumn" text="Usuń" style="-fx-alignment: center"/>
                     </columns>
                     <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -68,7 +68,7 @@
                 <TableView fx:id="categoryTable" prefWidth="600.0" HBox.hgrow="ALWAYS" styleClass="quiz-page-table-view" editable="true">
                     <columns>
                         <TableColumn fx:id="categoryNameColumn" text="Nazwa" editable="true"/>
-                        <TableColumn fx:id="categoryDeleteColumn" text="Usuń"/>
+                        <TableColumn fx:id="categoryDeleteColumn" text="Usuń" style="-fx-alignment: center"/>
                     </columns>
                     <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
