--- a/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/styles.css
+++ b/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/styles.css
@@ -140,14 +140,12 @@
     -fx-font-size: 10pt;
 }
 
-
 .quiz-page-table-view .column-header {
     -fx-background-color: -fx-light-grey-color;
-
 }
 
 .table-view .column-header .label{
-    -fx-alignment: center-left;
+    -fx-alignment: center;
     -fx-font-size: 12pt;
 }
 
@@ -171,6 +169,7 @@
 .global-settings-page-section-title {
     -fx-spacing: 10px;
     -fx-padding: 5 0 5 0 px;
+    -fx-alignment: baseline-center;
 }
 
 .global-settings-page-new-element-hbox {
