add new controller for question answers stats

--- a/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/styles.css
+++ b/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/styles.css
@@ -194,3 +194,8 @@
     -fx-padding: 10 10 10 10px;
     -fx-alignment: center;
 }
+
+.question-name {
+    -fx-font-size: 12pt;
+    -fx-text-alignment: center;
+}
