--- a/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/quiz-settings-page.fxml
+++ b/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/quiz-settings-page.fxml
@@ -43,7 +43,7 @@
                     <columns>
                         <TableColumn fx:id="priorityColumn" text="Priorytet"/>
                         <TableColumn fx:id="parameterValueColumn" text="Wartość parametru" editable="true" />
-                        <TableColumn fx:id="rewardCategoryColumn" text="Kategoria nagrody" />
+                        <TableColumn fx:id="rewardCategoryColumn" text="Kategoria nagrody" styleClass="choice-box-cell"/>
                     </columns>
                     <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
