--- a/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/stats-page.fxml
+++ b/frontend/src/main/resources/majestatyczne/bestie/frontend/FXML/stats-page.fxml
@@ -28,10 +28,10 @@
     </HBox>
 
     <VBox HBox.hgrow="ALWAYS">
-        <TableView fx:id="questionTable" onMouseClicked="#onQuestionSelected" prefHeight="720.0" styleClass="home-page-table-view">
+        <TableView fx:id="questionTable" onMouseClicked="#onQuestionSelected" prefHeight="720.0" styleClass="stats-page-table-view">
             <columns>
-                <TableColumn fx:id="contentColumn" style="-fx-pref-width: 970px" text="Treść pytania"/>
-                <TableColumn fx:id="scoreColumn" style="-fx-pref-width: 100px; -fx-alignment: center-right" text="'%' poprawnych"/>
+                <TableColumn fx:id="contentColumn" text="Treść pytania" style="-fx-pref-width: 930px"/>
+                <TableColumn fx:id="scoreColumn" style="-fx-pref-width: 150px; -fx-alignment: center" text="\% poprawnych"/>
             </columns>
             <columnResizePolicy>
                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
